--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="description"
+          content="Embark your investment journey with us where you will be provided with high value profits.">
     <title>Protonate-funds</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" 
+  type="image/png" 
+  href="https://media.discordapp.net/attachments/1013401945177858129/1118661178210668575/Screenshot_2023-06-14_174741-removebg-preview_1.png">
   </head>
   <body>
     
